fix color of reply row, fix overflow in status-popover

--- a/src/components/status/status.scss
+++ b/src/components/status/status.scss
@@ -4,6 +4,7 @@ $status-margin: 0.75em;
 
 .Status {
   min-width: 0;
+  white-space: normal;
 
   &:hover {
     --_still-image-img-visibility: visible;
@@ -166,6 +167,7 @@ $status-margin: 0.75em;
     line-height: 160%;
     max-width: 100%;
     align-items: stretch;
+    z-index: 2;
   }
 
   & .reply-to-popover,
@@ -211,7 +213,9 @@ $status-margin: 0.75em;
     padding-right: 0.25em;
   }
 
+  & .mentions-text,
   & .reply-to-text {
+    color: var(--faint);
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
